# controllers/games.js
@@ -112,6 +112,27 @@ exports.ended = async (idGame, data) => {
     }
 };
 
+exports.eventCards = async (idGame, cards) => {
+    try {
+        const game = await Game.findById(idGame);
+        if (!game) {
+            throw new MyError(404, 'Game does not exist')
+        }
+        game.cardsPicked = game.cardsPicked.concat(cards);
+        if(game.numTour === 7) {
+            game.step = 4;
+        } else {
+            game.numTour++;
+            game.step = 1;
+        }
+
+        return await game.save();
+    } catch (err) {
+        if (err.status) throw err;
+        throw new MyError(500, 'Internal server error');
+    }
+};
+
 // ======================== //
 // ==== Get functions ===== //
 // ======================== //
