# swagger/swagger.yaml
@@ -314,3 +314,43 @@ paths:
           description: Invalid form data
         '500':
           description: Internal Server Error
+  /api/public/game/{idGame}/eventcards:
+    put:
+      summary: add event cards to the game and go to the next turn
+      security: []   # No security
+      tags:
+        - games
+      parameters:
+        - name: idGame
+          in: path
+          description: game ID
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        description: the event cards
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                cardsPicked:
+                  type: array
+                  minLength: 3
+                  maxLength: 3
+                  example:
+                    - 5
+                    - 4
+                    - 2
+                  items:
+                    type: integer
+      responses:
+        '201':
+          description: action successfully doned
+        '404':
+          description: Game does not exist
+        '422':
+          description: Invalid form data
+        '500':
+          description: Internal Server Error
